fix/uploads (#64)
Reviewed-on: https://git.ombrage.space/opendrive/opendrive/pulls/64
Co-committed-by: Nicolas Boyer <boyer63nicolas@gmail.com>
